mejoras en el diseño de productos, crear, eliminar y editar

--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -9,6 +9,12 @@
 <p>
     <a asp-action="Create">Crear un Usuario</a>
 </p>
+<form asp-controller="Usuarios" asp-action="Index" method="get">
+    <p>
+        <label>Nombre: <input type="text" name="searchString" /></label>
+        <input type="submit" value="Filtrar" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
