--- a/Views/Productos/Edit.cshtml
+++ b/Views/Productos/Edit.cshtml
@@ -9,7 +9,7 @@
         <div class="col-md-8">
             <div class="card shadow-lg border-0">
                 <div class="card-header bg-primary text-white py-3">
-                    <h4 class="mb-0"><i class="bi bi-plus-circle me-2"></i>Registrar Nuevo Producto</h4>
+                    <h4 class="mb-0"><i class="bi bi-plus-circle me-2"></i>Editar Producto</h4>
                 </div>
 
                 <div class="card-body p-4">
