--- a/Views/Carrito/Index.cshtml
+++ b/Views/Carrito/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+
 
 @model List<CarritoItem>
 
@@ -108,11 +108,9 @@
                     </h4>
                 </div>
                 <div class="d-flex justify-content-end mt-3">
-                    <form asp-controller="Carrito" asp-action="FinalizarCompra" method="post">
-                        <button type="submit" class="btn btn-success btn-lg">
-                            Finalizar Compra
-                        </button>
-                    </form>
+                    <a asp-controller="Carrito" asp-action="Checkout" class="btn btn-success btn-lg">
+                        Comprar
+                    </a>
                 </div>
 
             </div>
